--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,8 @@
     <string name="action_settings">Settings</string>
     <string name="title_activity_maps">Map</string>
 
+    <string name="gps_network_not_enabled">The location service or the network are not enabled !</string>
+    <string name="open_location_settings">Settings</string>
+    <string name="retry">Retry</string>
+
 </resources>
