--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,6 +14,8 @@
     <string name="gps_network_not_enabled">The location service or the network are not enabled !</string>
     <string name="open_location_settings">Settings</string>
     <string name="retry">Retry</string>
+    <string name="cancel">Cancel</string>
+    <string name="start">Start</string>
 
     <string name="challenge_unlocked">New challenge unlocked!</string>
 
